fixtures/runtime/valid/functions/return-no-value.php
<?php
function empty_return()
{
    return;
}

echo empty_return(), "x\n";
