fixtures/runtime/invalid/functions/return-type-error.php
<?php
function bad(): int
{
    return "no";
}

bad();
